[tool.poetry]
name = "mee"
version = "0.1.0"
description = ""
authors = ["MEE <meedev009@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.19"
pydantic==1.0.0


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
